--- a/src/styles.css
+++ b/src/styles.css
@@ -3,18 +3,19 @@
  */
 
 body {
-	font-family: sans-serif;
-	display: flex;
+    font-family: sans-serif;
+    display: flex;
     flex-direction: column;
     background-color: silver;
     margin: 0;
 }
 
 h2 {
-	padding: 0 40px;
+    padding: 0 40px;
 }
 
-button {
+button,
+.searchfield__submit-button {
     min-width: 60px;
     height: 40px;
     font-size: 14px;
@@ -27,7 +28,7 @@ button {
 
 input {
     border: 1px solid grey;
-	border-radius: 4px;
+    border-radius: 4px;
 }
 
 /*
@@ -35,14 +36,14 @@ input {
  */
 
 .controls {
-	display: flex;
-	background-color: #92bfce;
-	padding: 10px 0;
-	box-shadow: 0 40px 60px 0 rgba(18, 64, 86, 0.75);
+    display: flex;
+    background-color: #92bfce;
+    padding: 10px 0;
+    box-shadow: 0 40px 60px 0 rgba(18, 64, 86, 0.75);
 }
 
 .logo__wrapper {
-	flex-grow: 1;
+    flex-grow: 1;
 }
 
 .searchfield {
@@ -62,7 +63,7 @@ input {
 }
 
 .gallery-button__wrapper {
-	display: flex;
+    display: flex;
     flex-grow: 1;
     justify-content: center;
 }
@@ -75,33 +76,33 @@ input {
     display: flex;
     flex-wrap: wrap;
     list-style-type: none;
-	justify-content: space-between;
-	padding: 0 40px;
+    justify-content: space-between;
+    padding: 0 40px;
 }
 
 .searchresults__list li {
-	border: 3px solid grey;
-	height: 200px;
-	margin-bottom: 20px;
+    border: 3px solid grey;
+    height: 200px;
+    margin-bottom: 20px;
     background-color: #eee;
 }
 
 .searchresults__list li.selected {
-	border: 3px solid #92bfce;
+    border: 3px solid #92bfce;
 }
 
 .searchresults__list img {
-	height: 100%;
-	object-fit: cover;
+    height: 100%;
+    object-fit: cover;
 }
 
 .searchresults__list li.selected img {
-	transform: scale(0.8);
+    transform: scale(0.8);
 }
 
 .searchresults.clipped {
-	max-height: 620px;
-	overflow: hidden;
+    max-height: 620px;
+    overflow: hidden;
 }
 
 /*
@@ -109,8 +110,8 @@ input {
  */
 
 .gallery {
-	display: none;
-    background-color: rgba(0,0,0,0.5);
+    display: none;
+    background-color: rgba(0, 0, 0, 0.5);
     justify-content: center;
     position: absolute;
     width: 100%;
@@ -122,8 +123,8 @@ input {
 }
 
 .gallery__content {
-	display: flex;
-	flex-direction: column;
+    display: flex;
+    flex-direction: column;
     background-color: silver;
     width: 70%;
     height: 500px;
@@ -132,7 +133,7 @@ input {
     align-self: center;
     z-index: 200;
     padding: 20px;
-	box-shadow: 26px 31px 46px 0 rgba(0,0,0,0.75);
+    box-shadow: 26px 31px 46px 0 rgba(0, 0, 0, 0.75);
 }
 
 .gallery__controls {
@@ -144,8 +145,8 @@ input {
 }
 
 .gallery__list {
-	list-style-type: none;
-	align-self: center;
+    list-style-type: none;
+    align-self: center;
     padding: 0 40px;
     display: flex;
     align-items: center;
@@ -153,7 +154,7 @@ input {
 }
 
 .gallery__list li {
-	display: none;
+    display: none;
 }
 
 .gallery__list img {
@@ -181,11 +182,11 @@ input {
 }
 
 .gallery__list li.visible {
-	display: flex;
+    display: flex;
 }
 
 .gallery.visible {
-	display: flex;
+    display: flex;
 }
 
 /*
@@ -194,19 +195,19 @@ input {
 
 .message {
     display: flex;
-	border: 1px solid #f5f59d;
-	border-radius: 4px;
-	background-color: #d0d06a;
+    border: 1px solid #f5f59d;
+    border-radius: 4px;
+    background-color: #d0d06a;
     align-items: center;
     margin: 20px;
     padding: 20px;
 }
 
 .message__container {
-	display: none;
-	justify-content: center;
+    display: none;
+    justify-content: center;
 }
 
-.message__container.visible{
-	display: flex;
+.message__container.visible {
+    display: flex;
 }
